[package]
name = "cargo-cvm"
version = "0.2.1"
authors = ["Ryan <ryan.michael.tate@gmail.com>"]
edition = "2018"
description = "Rust Crate Version Manager (CVM)"

[[bin]]
name = "cargo-cvm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.28"
clap = "2.33.2"
toml = "0.5.6"
serde = { version = "1.0.114", features = ["derive"] }
log = "0.4.8"
env_logger = "0.7.1"
