[package]
name = "cargo-cvm"
version = "0.4.4"
edition = "2018"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Rust Crate Version Manager (CVM)"
repository = "https://github.com/infinyon/cargo-cvm"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["crate", "semantic", "version", "semver", "manager"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[[bin]]
name = "cargo-cvm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.32"
cargo_toml = "0.8.1"
clap = "2.33.2"
toml = "0.5.6"
serde = { version = "1.0.114", features = ["derive"] }
log = "0.4.11"
env_logger = "0.7.1"
git2 = "0.13.8"
