[package]
name = "cargo-cvm"
version = "0.5.9"
edition = "2018"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Rust Crate Version Manager (CVM)"
repository = "https://github.com/infinyon/cargo-cvm"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["crate", "semantic", "version", "semver", "manager"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[[bin]]
name = "cargo-cvm"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
cargo_toml = "0.8.1"
clap = { version = "4.0.18", features = ["derive"] }
toml = "0.5.6"
serde = { version = "1.0.114", features = ["derive"] }
log = "0.4.11"
env_logger = "0.7.1"
git2 = "0.13.8"
